<resources>
    <string name="app_name">marketplace</string>

    <string name="explore">Explore</string>
    <string name="cart">Keranjang</string>
    <string name="all_cart">Semua Daftar Belanja</string>
    <string name="account">Akun</string>
    <string name="new_password">Buat Kata Sandi</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="my_product">Produk saya</string>

    <string name="hint_name">Nama</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_password_confirm">Konfirmasi Kata Sandi</string>
    <string name="hint_phone">Nomor Telpon</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Alamat</string>
    <string name="hint_merchant_name">Nama Toko</string>
    <string name="hint_merchant_address">Alamat Toko</string>
    <string name="hint_image">Nama File</string>

    <string name="hint_search">Cari di sini…</string>

    <string name="detail">Detail</string>
    <string name="print">Cetak</string>

    <string name="info_password_length"><![CDATA[Minimum %1$s karakter]]></string>

    <string name="button_login">Masuk</string>
    <string name="button_close">Tutup</string>
    <string name="button_register">Daftar</string>
    <string name="button_add">Tambah</string>
    <string name="hint_description">Deskripsi</string>

    <string name="title_add_product">Tambah Produk</string>
    <string name="title_edit_product">Ubah Data Produk</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>

    <string name="cancellation">Batalkan?</string>
    <string name="alert_cancellation">Apakah Anda yakin ingin membatalkan perubahan data?</string>
    <string name="alert_cancellation_input">Apakah Anda yakin ingin membatalkan penambahan data?</string>

    <string name="forgot_password">Lupa kata sandi</string>
    <string name="have_no_account_register_here">Tidak punya akun? Daftar di sini</string>
    <string name="register_here">Daftar di sini</string>
    <string name="umkm_name">Nama UMKM</string>

    <string name="product_name">Nama Produk</string>
    <string name="product_stock">Stok</string>
    <string name="product_weight">Berat Produk / gram</string>
    <string name="product_desc">Deskripsi Produk</string>
    <string name="product_price">Harga Produk</string>

    <string name="promo">Promo</string>
    <string name="product_semua">Semua Produk</string>
    <string name="produk_terbaru">Produk Terbaru</string>
    <string name="produk_terpopuler">Produk Terpopuler</string>

    <string name="ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="accept">Terima Pesanan</string>

    <string name="ambil">Ambil Pesanan</string>
    <string name="diambil">Pesanan Diambil</string>

    <string name="alert_logout">logout</string>
    <string name="alert_logout_desc">Anda yakin ingin logout?</string>

    <string name="alert">Perhatian!!!</string>
    <string name="alert_delete_data">Apakah anda yakin akan menghapus data ini?</string>
    <string name="alert_cancel_biller">Apakah anda yakin akan membatalkan pesanan ini?</string>

    <string name="tb_user_profile">Profil Pengguna</string>
    <string name="profile_name">Nama Pengguna</string>
    <string name="profile_email">Email Pengguna</string>
    <string name="profile_dob">Tanggal Lahir</string>
    <string name="profile_address">Alamat</string>
    <string name="profile_phone">Nomor Telpon</string>
    <string name="edit_data">Ubah Data</string>
    <string name="write_message_here">Tulis pesan di sini</string>

    <string name="select_image_source">Ambil foto dari</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>

    <string name="book">Pesan!!!</string>
    <string name="book_one">Pesan</string>

    <string name="chats">Pesan</string>
    <string name="review">Review</string>
    <string name="customer">Pembeli</string>
    <string name="seller">Penjual</string>

    <string name="register_title">Pendaftaran Akun</string>
    <string name="register_cancellation_desc">Apakah Anda yakin akan membatalkan pendaftaran?</string>
    <string name="order_cancellation_title">Pembatalkan pesanan?</string>
    <string name="order_cancellation_desc">Apakah Anda yakin akan membatalkan pesanan?</string>
    <string name="verify_otp">Verifikasi OTP</string>
    <string name="verify">Verifikasi</string>
    <string name="next">Lanjutkan</string>
    <string name="delete">Hapus</string>
    <string name="pesan_semua">Pesan Semua</string>
    <string name="select_all">Pilih Semua</string>

    <string name="confirm_book">Konfirmasi Pesanan</string>
    <string name="confirm">Konfirmasi</string>
    <string name="select_location">Pilih Lokasi</string>
    <string name="add_location">Tambah Lokasi</string>
    <string name="book_request">Pesanan</string>
    <string name="anda_belum_login">Anda Belum Login</string>
    <string name="silahkan_login_untuk_dapat_menggunakan_fitur_ini">Silahkan Login untuk dapat menggunakan fitur ini</string>

    <string name="input_quantity">Masukkan jumlah pesanan</string>
    <string name="lbl_amount">Jumlah</string>
    <string name="_0">0</string>

    <string name="waiting">Menunggu</string>
    <string name="progress">Dalam Proses</string>
    <string name="done">Selesai</string>

    <string name="transaction">Transaksi</string>
    <string name="downloading">Mengunduh…</string>
    <string name="downloading_invoice">Mengunduh Faktur</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="to_merchant">Ke Toko</string>
    <string name="lokasi_cod_kami">Lokasi COD Kami</string>
    <string name="produk_kami">Produk Kami</string>
    <string name="save">Simpan</string>

    <string name="periode">Periode\t</string>
    <string name="date">Tanggal</string>
    <string name="biller_id">Biller Id</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="lokasi_cod">Lokasi COD</string>
    <string name="download_report">Unduh Laporan</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="report">Laporan</string>
    <string name="retry">Retry</string>

    <string name="current_stock">Stok saat ini</string>

    <string-array name="month_list">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>