<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBox
        android:id="@+id/checkChild"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/book"
        android:textSize="13sp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@id/tvTotal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="12.000"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@id/tvTotal"
        app:layout_constraintTop_toBottomOf="@id/checkChild"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toEndOf="@id/tvPrice"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/delete"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintEnd_toStartOf="@id/btnBook"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnBook"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/book_one"
        android:padding="5dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        android:background="?attr/colorPrimaryVariant"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>